# case_collector

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: test.yml
apps/cases/: admin.py  models.py
apps/cases/migrations/: 0001_initial.py  0002_courtcase_case_number.py  0003_alter_disposition_date.py
apps/fcmcclerk/: admin.py  apps.py  models.py  parser.py  pyschema.py  tasks.py  tests.py
apps/fcmcclerk/management/commands/: fcmcclerk.py  scrape.py
apps/fcmcclerk/migrations/: 0001_initial.py  0002_rename_case_number_page_number_and_more.py  0003_caseoverview.py  0004_delete_caseoverview_page_overview_digest.py
apps/fcmcclerk_mock/: apps.py  fake_state.py  forms.py  pyschema.py  tests.py  urls.py  views.py
apps/fcmcclerk_mock/templates/fcmcclerk_mock/: report.html  result.html  search.html  view.html
apps/nextgen/: apps.py  tasks.py  tests.py
apps/nextgen/management/commands/: nextgen.py
apps/nextgen_mock/: apps.py  urls.py  views.py
apps/nextgen_mock/templates/nextgen_mock/: home.html  login.html  result.html  search.html  view.html
eviction_tool/: asgi.py  settings.py  urls.py  wsgi.py
