[project]
name = "dscrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.3",
    "django-stubs>=6.0.3",
    "numpy>=2.4.4",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "requests[socks]>=2.33.1",
    "uvicorn>=0.44.0",
    "whitenoise>=6.12.0",
]
